feat: improve ui

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,8 +9,11 @@
     <title>Anti-Semantle</title>
 </head>
 <body>
-    <h1 class="title">Anti-Semantle</h1>
-    <div id="app"></div>
-    <script src="index.js"></script>
+    <div id="main-container">
+        <div id="app"></div>
+    </div>
+    <footer>Anti-Semantle © Ron Mikhael Surara 2022</footer>
+    <script type="module" src="views/index.mjs"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
