chore: add client production endpoints

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
     </div>
     <footer>Anti-Semantle © Ron Mikhael Surara 2022</footer>
     <script type="module" src="views/index.mjs"></script>
-    <script src="env.js"></script>
+    <script src="endpoints.js"></script>
     <script type="module" src="index.js"></script>
 </body>
 </html>
