feat: add faq section

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,13 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.socket.io/4.5.3/socket.io.min.js" integrity="sha384-WPFUvHkB1aHA5TDSZi6xtDgkF0wXJcIIxXhC6h8OT8EH3fC5PWro5pWJ1THjcfEi" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
-    <title>Anti-Semantle</title>
+    <title>Anti-Semantics</title>
 </head>
 <body>
     <div id="main-container">
         <div id="app"></div>
     </div>
-    <footer>Anti-Semantle © Ron Mikhael Surara 2022</footer>
+    <section id="faq">
+        <h3>About Anti-Semanticse</h3>
+        <p>Anti-semantics started as a mental challenge I played in high school, either by myself or with my then roommate, Nates. I vaguely recall having read that trying to connect words that are as far away from each other can help increase lateral thinking and general creativity. I'm not sure if it was just pseudoscience but since I often had lots of time (I was living in a dorm that barely had any internet connection), I decided to continue doing these word games.</p>
+        <p>The game didn't have any name for years and I've only done it mostly mentally. Due to obvious reason, there was no scoring then. However, when I stumbled upon the web game Semantle, I realized that there is a way to measure and score the game! That was when I decided that I would give some sense to the game, and hopefully share it to the world.</p>
+        <h3>Credits</h3>
+        <p>Anti-Semantle uses Word2Vec models that are provided by the Gensim library.</p>
+        <h3>FAQ</h3>
+        <p><strong>Is Anti-Semantics based on Semantle?</strong></p>
+        <p>No. I have been playing this game years before I even discovered Semantle. Although, I will admit that it was Semantle that inspired me to make this game into a reality.</p> 
+    </section>
+    <footer>Anti-Semantics © Ron Mikhael Surara 2022</footer>
     <script type="module" src="views/index.mjs"></script>
     <script src="endpoints.js"></script>
     <script type="module" src="index.js"></script>
