--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
         <div id="app"></div>
     </div>
     <section id="faq">
-        <h3>About Anti-Semanticse</h3>
+        <h3>About Anti-Semantics</h3>
         <p>Anti-semantics started as a mental challenge I played in high school, either by myself or with my then roommate, Nates. I vaguely recall having read that trying to connect words that are as far away from each other can help increase lateral thinking and general creativity. I'm not sure if it was just pseudoscience but since I often had lots of time (I was living in a dorm that barely had any internet connection), I decided to continue doing these word games.</p>
         <p>The game didn't have any name for years and I've only done it mostly mentally. Due to obvious reason, there was no scoring then. However, when I stumbled upon the web game Semantle, I realized that there is a way to measure and score the game! That was when I decided that I would give some sense to the game, and hopefully share it to the world.</p>
         <h3>Credits</h3>
